--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:background="@drawable/key_bg"
                     android:gravity="center"
                     android:text="回退"
                     android:textColor="#000000"
@@ -107,13 +108,15 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#BFBFBF" />
+                    android:background="#BFBFBF"
+                    android:layout_marginBottom="1dp"/>
 
                 <TextView
                     android:id="@+id/key_discard"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="2"
+                    android:background="@drawable/key_bg"
                     android:gravity="center"
                     android:text="出牌"
                     android:textColor="#000000"
