--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title_bar"
-        android:background="#87CEEB"
+        android:background="#48D1CC"
         android:padding="1dp" />
 
     <android.support.v7.widget.RecyclerView
